[iOS WK2] compositing/overflow/dynamic-composited-scrolling-status.html asserts https://bugs.webkit.org/show_bug.cgi?id=209440 <rdar://problem/60705261>

Reviewed by Wenson Hsieh.

nonFastScrollableRectsForTesting() needs to eagerly update event regions after r258528,
as we do for touchEventRectsForEventForTesting().

Also renamed the function so it's clear that it's for testing only.

* page/Page.cpp:
(WebCore::Page::nonFastScrollableRectsForTesting):
(WebCore::Page::nonFastScrollableRects): Deleted.
* page/Page.h:
* testing/Internals.cpp:
(WebCore::Internals::nonFastScrollableRects const):

Canonical link: https://commits.webkit.org/222377@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258882 268f45cc-cd09-0410-ab3c-d52691b4dbfc